# g0vse

./: .gitignore  404.html  CNAME  README.md  arendeforteckningar.json  artiklar.json  debattartiklar.json  faktapromemoria.json  fetch.py  index.html  informationsmaterial.json  internationella-mr-granskningar-av-sverige.json  kommenterade-dagordningar.json  overenskommelser-och-avtal.json  pyproject.toml  rapporter.json  regeringsarenden.json  requirements.txt  run.py  sakrad.json  spamhaus.html  strategier-for-internationellt-bistand.json  tal.json  types.json  ud-avrader.json  uttalanden.json
api/: codes.json  latest_updated.json
frontend/: eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  types.json
jobba-hos-oss/: intervju-med-vicekonsuln-claude-yousef-jerusalem.md
rattsliga-dokument/: departementsserien-och-promemorior.json  forordningsmotiv.json  kommittedirektiv.json  lagradsremiss.json  proposition.json  skrivelse.json  statens-offentliga-utredningar.json  sveriges-internationella-overenskommelser.json
regeringsarenden/: regeringsarenden-vecka-1-2025.md  regeringsarenden-vecka-10-2025.md  regeringsarenden-vecka-11-2025.md  regeringsarenden-vecka-12-2025.md  regeringsarenden-vecka-13-2025.md  regeringsarenden-vecka-14-2025.md  regeringsarenden-vecka-15-2025.md  regeringsarenden-vecka-16-2025.md  regeringsarenden-vecka-17-2025.md  regeringsarenden-vecka-18-2025.md  regeringsarenden-vecka-19-2025.md  regeringsarenden-vecka-2-2026.md  regeringsarenden-vecka-20-2025.md  regeringsarenden-vecka-21-2025.md  (+55 more)
(+43888 files in other folders)
