[project]
name = "g0vse"
version = "0.1.0"
description = "Making the Swedish government's website (regeringen.se) accessible as open data."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "camoufox[geoip] @ git+https://github.com/coryking/camoufox.git@v142.0.1-fork.27#subdirectory=pythonlib",
    "fake-useragent>=2.2.0",
    "markdownify>=1.2.2",
]

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["frontend*", "data*"]

